--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <module>rest</module>
     <module>test</module>
   </modules>
-  <packaging>pom</packaging>
+  <packaging>war</packaging>
 
   <name>firstMavenProj</name>
   <!-- FIXME change it to the project's website -->
